AG-9138 - Fix scroll jump when navigating page nav
Use session storage to store scroll top and restore it on page load

--- a/packages/ag-charts-website/src/components/pages-navigation/PagesNavigation.module.scss
+++ b/packages/ag-charts-website/src/components/pages-navigation/PagesNavigation.module.scss
@@ -50,6 +50,10 @@
     }
 }
 
+.onLoad {
+    opacity: 0;
+}
+
 .menu {
     padding-top: $spacing-size-8;
     padding-bottom: $spacing-size-24;
